--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -3,25 +3,32 @@
 #     desired widget in your `content/home/` folder.
 #   The weight parameter defines the order that the links will appear in.
 
-[[main]]
-  name = "Home"
-  url = "#about"
-  weight = 10
 
 [[main]]
-  name = "Posts"
-  url = "#posts"
+  name = "About"
+  url = "#about"
+  weight = 10
+  
+  
+[[main]]
+  name = "Accomplishments"
+  url = "#accomplishments"
   weight = 20
+
+[[main]]
+  name = "Skills"
+  url = "#skills"
+  weight = 30
 
 [[main]]
   name = "Projects"
   url = "#projects"
-  weight = 30
+  weight = 40
 
 [[main]]
   name = "Publications"
-  url = "#featured"
-  weight = 40
+  url = "#publications"
+  weight = 50
 
 [[main]]
   name = "Contact"
@@ -30,7 +37,17 @@
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+ [[main]]
+    name = "CV"
+    url = "files/cv.pdf"
+    weight = 70
+    
+  [[main]]
+    name = "Transcript"
+    url = "files/transcript.pdf"
+    weight = 80
+ 
+  [[main]]
+    name = "Certificate for ranking"
+    url = "files/certificate.pdf"
+    weight = 90
